Build amd64 binaries

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,17 +11,12 @@ builds:
 
   goarch:
     - arm64
+    - amd64
   goos:
     - linux
 
 archives:
-- replacements:
-    # darwin: Darwin
-    # linux: Linux
-    # windows: Windows
-    386: i386
-    amd64: x86_64
-
+- replacements: {}
 checksum:
   name_template: 'checksums.txt'
 
